syntax = "proto3";

package user;

service UserService {
  rpc SetUserResidentDistrict(SetUserResidentDistrictRequest) returns (Empty);
  rpc GetUserPublicInfo(getUserPublicInfoRequest)
      returns (getUserPublicInfoResponse);
}

message SetUserResidentDistrictRequest {
  string userId = 1;
  repeated ResidentDistrict residentDistricts = 2;
}

message ResidentDistrict {
  string id = 1;
  int32 level = 2;
}

message Empty {}

message getUserPublicInfoRequest { string id = 1; }

message getUserPublicInfoResponse {
  string id = 1;
  string nickname = 2;
  string createdAt = 3;
}